--- a/results.html
+++ b/results.html
@@ -27,13 +27,13 @@
   </header>
 
   <div class="result-container" id="result">
-    <h2>Search Result</h2>
+    
     <div id="resultContent"></div>
     <button onclick="window.print()">Print</button>
     <button onclick="window.history.back()">Go Back</button>
   </div>
 
-  <footer class="footer"><p>&copy; 2025 Delightful Decor</p></footer>
+  <footer class="footer"><p>&copy; 2025 Mavrick Ghouse</p></footer>
 
   <script>
     // Retrieve the stored search result
