--- a/results.html
+++ b/results.html
@@ -1,68 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Search Result - Candidate Tracker</title>
+  <title>Candidate Details</title>
   <link rel="stylesheet" href="style.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
+      font-family: "Teko", sans-serif;
+      margin: 0;
+      background: linear-gradient(to right, #f0f2f5, #c9d6ff);
     }
+
+    .header-container {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      background-color: #000000;
+      color: white;
+      padding: 1rem 2rem;
+      justify-content: flex-start;
+    }
+
+    .logo {
+      height: 100px;
+      width: auto;
+    }
+
+    .header-container h1 {
+      font-size: 2rem;
+      margin: 0;
+      font-family: "Teko", sans-serif;
+    }
+
     .result-container {
-      border: 1px solid #ccc;
-      padding: 15px;
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 2rem;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
-    .buttons button {
-      margin-top: 10px;
+
+    .result-table {
+      width: 100%;
+      border-collapse: collapse;
+      page-break-inside: auto;
+    }
+
+    .result-table th,
+    .result-table td {
+      border: 1px solid #ccc;
+      padding: 0.75rem;
+      text-align: left;
+      page-break-inside: avoid;
+      page-break-after: auto;
+    }
+
+    .result-table th {
+      background-color: #000000;
+      color: white;
+    }
+
+    .button-group {
+      text-align: center;
+      margin-top: 1.5rem;
+    }
+
+    .btn {
+      background-color: #b74b4b;
+      color: white;
+      border: none;
+      padding: 0.6rem 1.2rem;
+      margin: 0 0.5rem;
+      border-radius: 10px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s ease;
+      text-decoration: none;
+    }
+
+    .btn:hover {
+      background-color: #000000;
+    }
+
+    /* Print Styles */
+    @media print {
+      body {
+        background: white;
+      }
+
+      .header-container {
+        background-color: white !important;
+        color: black !important;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        margin-bottom: 1rem;
+      }
+
+      .logo {
+        display: block;
+        height: 100px;
+      }
+
+      .header-container h1 {
+        font-size: 1.2rem;
+        color: black;
+      }
+
+      .button-group {
+        display: none;
+      }
+
+      .result-container {
+        box-shadow: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      .result-table {
+        width: 100%;
+        font-size: 12pt;
+      }
     }
   </style>
 </head>
 <body>
 
-  <header class="navbar">
+  <!-- Header Section -->
+  <header class="header-container">
     <img src="MG.jpg" alt="Logo" class="logo"/>
-    <h1>Candidate Tracker - Search Result</h1>
+    <h1>Candidate Details</h1>
   </header>
 
-  <div class="result-container" id="result">
-    
-    <div id="resultContent"></div>
-    <button onclick="window.print()">Print</button>
-    <button onclick="window.history.back()">Go Back</button>
-  </div>
-
-  <footer class="footer"><p>&copy; 2025 Mavrick Ghouse</p></footer>
+  <!-- Result Table Section -->
+  <section class="result-container animate-slide">
+    <table class="result-table" id="resultTable"></table>
+    <div class="button-group">
+      <a href="index.html" class="btn">Go Back</a>
+      <button onclick="window.print()" class="btn">Print</button>
+    </div>
+  </section>
 
   <script>
-    // Retrieve the stored search result
     const data = JSON.parse(localStorage.getItem('searchResult'));
 
     if (data) {
-      const resultContent = document.getElementById('resultContent');
-      resultContent.innerHTML = `
-        <p><strong>Candidate Name:</strong> ${data.candidateName}</p>
-        <p><strong>Staff Name:</strong> ${data.staffName}</p>
-        <p><strong>Passport Number:</strong> ${data.passportNumber}</p>
-        <p><strong>Reference:</strong> ${data.reference}</p>
-        <p><strong>Resume:</strong> ${(data.resume || []).join(', ')}</p>
-        <p><strong>Boarding Payment:</strong> ${data.boardingPayment}</p>
-        <p><strong>Boarding Payment Date:</strong> ${data.boardingPaymentDate}</p>
-        <p><strong>Boarding Agreement Signed Date:</strong> ${data.boardingAgreementDate}</p>
-        <p><strong>Offer Letter Received Date:</strong> ${data.offerLetterDate}</p>
-        <p><strong>Offer Letter Payment:</strong> ${data.offerLetterPayment}</p>
-        <p><strong>Original Document Received Date:</strong> ${data.originalDocumentDate}</p>
-        <p><strong>Document Verification:</strong> ${(data.documentVerification || []).join(', ')}</p>
-        <p><strong>Medical:</strong> ${(data.medical || []).join(', ')}</p>
-        <p><strong>Ticket:</strong> ${(data.ticket || []).join(', ')}</p>
-        <p><strong>Work Permit:</strong> ${(data.workPermit || []).join(', ')}</p>
-        <p><strong>Uploaded Document:</strong> ${data.document || 'No file upload'}</p>
-      `;
+      const table = document.getElementById('resultTable');
+      table.innerHTML = `
+        <thead><tr><th></th><th></th></tr></thead>
+        <tbody>
+          ${Object.entries(data).map(([key, value]) =>
+            `<tr><td>${key.replace(/([A-Z])/g, ' $1')}</td><td>${value || '-'}</td></tr>`).join('')}
+        </tbody>`;
     } else {
-      document.getElementById('result').innerHTML = '<p>No data available.</p>';
+      document.getElementById('resultTable').innerHTML = "<tr><td colspan='2'>No data found</td></tr>";
     }
   </script>
-
 </body>
 </html>
