--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="form-group"><label>Staff Name: <input type="text" name="staffName" required></label></div>
       <div class="form-group">
         <label>Passport Number:
-          <input type="text" name="passportNumber" id="passportNumber" oninput="validatePassport()">
+          <input type="text" name="passportNumber" placeholder="A1234567"  id="passportNumber" oninput="validatePassport()">
         </label>
         <div id="passportError" class="error-message"></div>
       </div>
